# vocab

./: .gitignore  Cargo.toml  README.md  test_word.json
src/: dictionary.rs  main.rs  speaker.rs  styled_text.rs  stylist.rs
