[package]
name = "vocab"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
crossterm = "0.28.1"
env_logger = "0.11.6"
rand = "0.9.0"
log = "0.4.25"
nlprule = "0.6.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
unicode-width = "0.2.0"

[build-dependencies]
nlprule-build = "0.6.4"